<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment" android:background="#0f0f0f">

<EditText
    android:id="@+id/nombreJugador"
    android:layout_width="209dp"
    android:layout_height="47dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:hint="@string/edit_message"
    android:inputType="textPersonName"
    app:layout_constraintEnd_toStartOf="@+id/botonSalir"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/puntuacion"
    android:layout_width="98dp"
    android:layout_height="56dp"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="6dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="307dp"
    android:layout_marginBottom="6dp"
    android:fontFamily="casual"
    android:text="0"
    android:textAlignment="textEnd"
    android:textColor="#F0F0F0"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/button1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nombreJugador" />

<Button
    android:id="@+id/botonSalir"
    android:layout_width="111dp"
    android:layout_height="48dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="#CDDC39"

    android:text="@string/button_send"
    app:layout_constraintBaseline_toBaselineOf="@+id/nombreJugador"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/nombreJugador" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/button1"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"

    android:text="@string/button_1"
    android:textSize="60sp"
    android:textColor="@drawable/button_text_color"
    app:rippleColor="#b7ffb9"
    app:backgroundTint="#4CAF50"
    app:layout_constraintBottom_toTopOf="@+id/button3"
    app:layout_constraintEnd_toStartOf="@+id/button2"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nombreJugador" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/button2"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_marginEnd="8dp"

    android:text="@string/button_2"
    android:textColor="@drawable/button_text_color"
    android:textSize="60sp"
    app:rippleColor="#ffb4cd"
    app:backgroundTint="#E91E63"

    app:layout_constraintBaseline_toBaselineOf="@+id/button1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/button1" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/button3"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"

    android:text="@string/button_3"
    android:textColor="@drawable/button_text_color"
    android:textSize="60sp"

    app:rippleColor="#fff9c0"
    app:backgroundTint="#FFEB3B"
    app:layout_constraintBottom_toTopOf="@+id/button5"
    app:layout_constraintEnd_toStartOf="@+id/button4"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button1" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/button4"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_marginEnd="8dp"

    android:textColor="@drawable/button_text_color"
    android:textSize="60sp"
    app:rippleColor="#adb8f6"
    app:backgroundTint="#3F51B5"
    android:text="@string/button_4"
    app:layout_constraintBaseline_toBaselineOf="@+id/button3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/button3" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/button5"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="24dp"
    android:onClick="pplaySound5"

    android:text="@string/button_5"
    android:textColor="@drawable/button_text_color"
    android:textSize="60sp"

    app:rippleColor="#fabaa6"
    app:backgroundTint="#FF5722"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/button6"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button3" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/button6"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:layout_marginEnd="8dp"

    android:text="@string/button_6"
    android:textColor="@drawable/button_text_color"
    android:textSize="60sp"

    app:rippleColor="#bcf1f8"
    app:backgroundTint="#00BCD4"
    app:layout_constraintBaseline_toBaselineOf="@+id/button5"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/button5" />

<ImageView
    android:id="@+id/reinicio"
    android:layout_width="224dp"
    android:layout_height="164dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.527"
    app:srcCompat="@android:drawable/ic_menu_rotate"

    android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>