<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.botonessonoros.MainActivity">

    <Button
        android:id="@+id/jugarBoton"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/inicio"
        android:textSize="34sp"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/puntuacionesBoton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/puntuacionesBoton"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/tablaDePuntos"
        android:textSize="29sp"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/informacionBoton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jugarBoton" />

    <Button
        android:id="@+id/informacionBoton"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/acercaDe"
        android:textSize="29sp"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/adView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puntuacionesBoton" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544~3347511713"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        ads:refreshInterval="4"/>

</androidx.constraintlayout.widget.ConstraintLayout>
