<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f0f0f"
    tools:context=".MainActivity3">

    <!-- <Button
        android:id="@+id/botonSalir"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:background="#CDDC39"

        android:text="@string/salirAlMenu"
        app:layout_constraintBaseline_toBaselineOf="@+id/puntuacion"
        app:layout_constraintEnd_toEndOf="parent" /> -->

    <TextView
        android:id="@+id/puntuacion"
        android:layout_width="173dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:fontFamily="casual"
        android:text="Puntos:"
        android:textAlignment="viewStart"
        android:textColor="#F0F0F0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:onClick="playSound1"
        android:text="@string/button_1"
        android:textColor="@drawable/button_text_color"
        android:textSize="60sp"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:rippleColor="#b7ffb9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:onClick="playSound2"
        android:text="@string/button_2"
        android:textColor="@drawable/button_text_color"
        android:textSize="60sp"
        app:backgroundTint="#E91E63"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:rippleColor="#ffb4cd" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="playSound3"
        android:text="@string/button_3"
        android:textColor="@drawable/button_text_color"
        android:textSize="60sp"
        app:backgroundTint="#FFCE1B"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:rippleColor="#fff9c0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:onClick="playSound4"
        android:text="@string/button_4"
        android:textColor="@drawable/button_text_color"
        android:textSize="60sp"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:rippleColor="#B6BFF4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"

        android:onClick="playSound5"
        android:text="@string/button_5"
        android:textColor="@drawable/button_text_color"
        android:textSize="60sp"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:rippleColor="#fabaa6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:onClick="playSound6"
        android:text="@string/button_6"
        android:textColor="@drawable/button_text_color"
        android:textSize="60sp"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:rippleColor="#C7F5FB" />

    <!--<ImageView
        android:id="@+id/reinicio"
        android:layout_width="223dp"
        android:layout_height="230dp"
        android:onClick="patron"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527"
        app:srcCompat="@drawable/boton_reinicio" /> -->

    <Button
        android:id="@+id/reinicio_boton"
        android:layout_width="278dp"
        android:layout_height="282dp"
        android:background="@drawable/boton_reinicio"
        android:onClick="patron"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="61dp"
        android:fontFamily="casual"
        android:text="Niveles"
        android:textColor="#F0F0F0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/puntuacion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>